--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -1,12 +1,12 @@
 @import url(https://fonts.google.com/specimen/Roboto);
 .form-holder{
-    box-shadow:2px 0px 15px 0px rgba(106, 101, 101, 0.769);
+    box-shadow:2px 0px 15px 0px rgba(57, 50, 50, 0.637);
     width:400px;
     margin:100px auto;
     padding:30px;
-   background-color:#6b6b71; 
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(20,240,190,1) 0%, rgba(0,212,255,1) 100%);; 
     border-radius:20px;
-    color:white;
+    color:rgba(29, 19, 19, 0.66);
     font-family: 'Roboto', sans-serif;
 
 
